ajustment for eos

--- a/Configs/.config/waybar/modules/window.jsonc
+++ b/Configs/.config/waybar/modules/window.jsonc
@@ -11,6 +11,7 @@
             "(.*) — Dolphin": "$1 󰉋",
             "(.*)Spotify": "Spotify 󰓇",
             "(.*)Steam": "Steam 󰓓"
+            "(.*)Discord": "Discord "
         },
         "max-length": 50
     },
