--- a/Configs/.config/fastfetch/config.jsonc
+++ b/Configs/.config/fastfetch/config.jsonc
@@ -18,7 +18,7 @@
         },
         {
             "type": "os",
-            "key": "   OS",
+            "key": "   OS",
             "keyColor": "red"
         },
         {
