--- a/Configs/.config/hypr/keybindings.conf
+++ b/Configs/.config/hypr/keybindings.conf
@@ -34,6 +34,9 @@ bind = $mainMod, E, exec, $file # launch file manager
 bind = $mainMod, C, exec, $editor # launch text editor
 bind = $mainMod, F, exec, $browser # launch web browser
 bind = Ctrl+Shift, Escape, exec, $scrPath/sysmonlaunch.sh # launch system monitor (htop/btop or fallback to top)
+bind = , xf86Launch1, exec, rog-control-center
+bind = $mainMod, M, exec, spotify # lauch spotify
+bind = $mainMod, D, exec, discord # lauch discord
 
 # Rofi menus
 bind = $mainMod, A, exec, pkill -x rofi || $scrPath/rofilaunch.sh d # launch application launcher
