--- a/Configs/.config/waybar/modules/window.jsonc
+++ b/Configs/.config/waybar/modules/window.jsonc
@@ -3,15 +3,18 @@
         "rotate": ${r_deg},
         "separate-outputs": true,
         "rewrite": {
-            "${USER}@${set_sysname}:(.*)": "$1 ",
+            "(.*)${USER}@${set_sysname}:(.*)": "$1  :$2",
             "(.*) — Mozilla Firefox": "$1 󰈹",
-            "(.*)Mozilla Firefox": "Firefox 󰈹",
+            "(.*)Mozilla Firefox": "$1 Firefox 󰈹",
             "(.*) - Visual Studio Code": "$1 󰨞",
-            "(.*)Visual Studio Code": "Code 󰨞",
+            "(.*)Visual Studio Code": "$1 Code 󰨞",
             "(.*) — Dolphin": "$1 󰉋",
-            "(.*)Spotify": "Spotify 󰓇",
-            "(.*)Steam": "Steam 󰓓"
-            "(.*)Discord": "Discord "
+            "(.*)Spotify.*": "$1 Spotify 󰓇",
+            "(.*)Steam": "$1 Steam 󰓓",
+            "(.*) - Discord": "$1  ",
+            "(.*?)-\\s*YouTube(.*)": "$1󰗃",
+            "(.*?\\s)YouTube(.*)": "$1YouTube 󰗃",
+            "(.*)Github": "$1 Github 󰊤"
         },
         "max-length": 50
     },
